css/maker.css
body{
    touch-action: none;
}

header{
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
    gap: 2rem;
}

header > div{
    display: flex;
    flex-direction: column;
    gap: 0.4rem;
}

header > div:last-child{
    align-items: flex-end;
}

game-scene{
    display: flex;
    flex-direction: column;
    align-items: center;
}

game-board .wrapper{
    border: 1px solid black;
    margin-top: 4rem;
    margin-bottom: 4rem;
    min-height: 1rem;
    box-shadow: none;
}

    game-board .board-tile:hover{
        border: 1px solid black;
        cursor: pointer;
    }

.mode{
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    max-width: 500px;
    gap: 0.4rem;
}

    .mode button.selected{
        filter: brightness(1.4);
    }

